Fix menubar and menus on mobile

--- a/app/components/MenuBar.module.css
+++ b/app/components/MenuBar.module.css
@@ -50,6 +50,10 @@
   align-items: center;
   -webkit-padding-end: var(--menu-item-padding);
   padding-inline-end: var(--menu-item-padding);
+
+  @media (width < 410px) {
+    display: none;
+  }
 }
 
 .name {
@@ -93,6 +97,11 @@
   box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.75);
   list-style-type: none;
   padding-block: 4px;
+
+  /* fix menu going off screen - not ideal, but best we can do without JavaScript I think */
+  @media (width < 600px) {
+    right: 0;
+  }
 
   &::before {
     /* background on separate layer to control opacity */
